[project]
name = "untappd"
version = "0.1.0
description = "Beers, beers everywhere ðŸº"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.9",
    "flake8>=7.1.1",
    "ipython>=8.30.0",
    "mock>=5.1.0",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "types-mock>=5.1.0.20240425",
    "types-requests>=2.32.0.20241016",
]
