[project]
name = "untappd"
version = "0.1.0"
description = "Beers, beers everywhere ðŸº"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
]

[tool.djlint]
profile = "jinja"
indent = 4
max_line_length = 120
ignore = "H030,H031"

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "types-mock>=5.1.0.20240425",
]
